[tool.poetry]
name = "race_condition"
version = "0.1.0"
description = ""
authors = ["Aurel <megnigbetoa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
SQLAlchemy = "^1.4.15"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
